# resilience-agent

./: .gitignore  FIXES.md  MIGRATION_NOTES.md  QUICKSTART.md  README.md  boto3_tests.py  pyproject.toml  start-backend.sh  start-frontend.sh  test_import.py
agent_backend/: api.py  main.py  main_unused.py  pyproject.toml  requirements.txt  test_phase3.py
agent_backend/aws_knowledge_agent/: knowledge_agent.py
agent_backend/discovery_agent/: __init__.py  resource_discovery_agent.py
agent_backend/discovery_agent/tools/: __init__.py  resource_explorer.py
agent_backend/resilience_agent/: __init__.py  agent.py  handlers.py  model_config.py  model_factory.py
agent_backend/resilience_agent/tools/: __init__.py  experiment_models.py  operation_modes.py  planning_tools.py
agent_frontend/: README.md  index.tsx  package.json
agent_frontend/src/: App.tsx  types.ts
agent_frontend/src/components/: ActionLog.tsx  Banner.tsx  ChatDisplay.tsx  CommandSuggestions.tsx  Footer.tsx  Header.tsx  InfoScreen.tsx  ModeTransitionDialog.tsx
agent_frontend/src/services/: AgentService.ts
aws_knowledge_agent/: __init__.py  knowledge_agent.py
resilience_agent/: agent.py
resilience_agent/tools/: __init__.py
