[project]
name = "resilience-agent-backend"
version = "0.1.0"
description = "Resilience Architect - Backend API for chaos engineering agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.35.0",
    "strands-agents-tools>=0.4.0",
    "strands-agents[anthropic]>=1.35.0",
    "strands-agents[bedrock]>=1.35.0",
    "strands-agents[gemini]>=1.35.0",
    "strands-agents[openai]>=1.35.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aws_knowledge_agent*", "discovery_agent*", "resilience_agent*"]
